fix: align with local dev, signup login logo fix, home page style fix

--- a/client/src/pages/portfolio/portfolio.css
+++ b/client/src/pages/portfolio/portfolio.css
@@ -9,7 +9,6 @@
 .dashboard__user__portfolio__container{
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
     width: 100%;
 }
 
