--- a/client/src/pages/signup/Signup.css
+++ b/client/src/pages/signup/Signup.css
@@ -7,7 +7,7 @@
     flex-direction: column;
 }
 
-.logo{
+.logo-signup{
     display: flex;
     width: 10rem;
     height: 10rem;
